Finished Header & Footer

--- a/index.html
+++ b/index.html
@@ -1,69 +1,182 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document</title>
+    <title>Free Package Shop</title>
     <meta charset = 'utf-8' />
+    <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+    <link rel = 'stylesheet' href = 'styling/main.css' />
   </head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link rel = 'styling/main.css' />
   <body>
-    <header class = 'd-flex align-items-center'>
+    <section id = 'above-header' class = 'text-center p-1 bg-primary'>
+      <a class = 'text-white'>Enjoy free domestic shipping on orders $65+</a>
+    </section>
+    <header class = 'd-flex align-items-center justify-content-between bg-secondary p-4'>
       <button class = 'd-block d-md-none bg-transparent border-0' id = 'toggle-main-menu'>
         <i class = 'bi bi-list'></i>
       </button>
       <div id = 'main-menu'>
-        <ul class = 'd-md-inline-block p-0 list-unstyled'>
-          <li class = 'parent-menu'>
-            <a href = '#shop-all'>
+        <ul class = 'd-md-inline-flex m-0 p-0 list-unstyled'>
+          <li class = 'parent-element px-3' data-child = "shop-all-menu">
+            <a href = '#' class = 'bg-transparent border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>
               Shop All
             </a>
-            <ul class = 'sub-menu'>
+            <ul class = 'child-menu' id = 'shop-all-menu'>
+              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop All</li>
+              <li class = 'parent-element'>
+                <a href = '#' class = 'menu-toggle text-primary' data-toggle = 'featured-products' id = 'featured-products-toggle'>
+                  Featured
+                </a>
+                <ul class = 'child-menu' id = 'featured-products'>
+                  <li class = 'menu-toggle get-back d-block d-md-none' data-original = "featured-products-toggle" data-toggle='featured-products'><i class = 'bi bi-arrow-left mr-4'></i> Featured</li>
+                  <li>One</li>
+                  <li>Two</li>
+                </ul>
+              </li>
+              <li>World</li>
             </ul>
           </li>
+          <li class = 'px-3'>
+            <a href = '#' class = 'text-primary'>About Us</a>
+          </li>
         </ul>
-        <footer class = 'd-block d-md-none'>
-          <a href = '#login'>
+        <footer class = 'd-block d-md-none p-5 position-absolute bottom-0 w-100'>
+          <a href = '#login' class = 'text-primary' style = 'font-size:18px'>
             <i class = 'bi bi-person'></i>
             Log in
           </a>
-          <nav class = 'd-flex' target = '_blank'>
-            <a href = '#facebook-link'>
+          <nav class = 'd-flex py-4'>
+            <a href = '#facebook-link' target = '_blank' class = 'text-primary mr-2'>
               <i class = 'bi bi-facebook'></i>
             </a>
-            <a href = '#pinterest-link' target = '_blank'>
+            <a href = '#pinterest-link' target = '_blank' class = 'text-primary mx-2'>
               <i class = 'bi bi-pinterest'></i>
             </a>
-            <a href = '#instagram' target = '_blank'>
+            <a href = '#instagram' target = '_blank' class = 'text-primary mx-2'>
               <i class = 'bi bi-instagram'></i>
             </a>
-            <a href = '#tiktok' target = '_blank'>
+            <a href = '#tiktok' target = '_blank' class = 'text-primary mx-2'>
               <i class = 'bi bi-tiktok'></i>
             </a>
           </nav>
         </footer>
       </div>
 
-      <img src = 'images/logo.svg' width = '180' alt = "Website's Logo" />
+      <a href = 'index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
-      <ul class = 'd-flex p-0 list-unstyled'>
-        <li>
-          <button id = 'search-panel' class = 'bg-transparent border-0'>
+      <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
+        <li class = 'mx-2'>
+          <button id = 'open-search-panel' class = 'bg-transparent border-0 text-primary'>
             <i class = 'bi bi-search'></i>
           </button>
         </li>
-        <li>
-          <a href = 'pages/login.html' class = 'button bg-transparent border-0'>
-            <i class = 'bi bi-person'></i>
+        <li class = 'mx-2'>
+          <a href = 'pages/auth.html' class = 'd-none d-md-block button bg-transparent border-0 text-primary'>
+            <i class = 'bi bi-person' style = 'font-size:23px'></i>
           </a>
         </li>
-        <li>
-          <button id = 'cart-panel' data-count = "0" class = 'bg-transparent border-0'>
+        <li class = 'mx-2'>
+          <button id = 'open-cart-panel' data-count = "2" class = 'bg-transparent border-0 text-primary'>
             <i class = 'bi bi-bag'></i>
           </button>
         </li>
       </ul>
+
+      <section id = 'search-panel' class = 'w-100'>
+        <header class = 'w-100 bg-secondary p-4 d-flex justify-content-between align-items-center'>
+          <div class = 'labeled-input w-100'>
+            <input placeholder = "hello" type = 'search' id = 'search' class = 'w-100 position-relative' title = "Search"/>
+            <label for = 'search'>Search</label>
+            <button class = 'bg-transparent border-top-0 border-right-0 border-bottom-0 border-color-primary px-3'>
+              <i class = 'bi bi-search'></i>
+            </button>
+          </div>
+          <button id = 'close-search-panel' class = 'bg-transparent border-0' style = 'font-size:25px'>
+            <i class = 'bi bi-x'></i>
+          </button>
+        </header>
+        <ul id = 'search-results'>
+
+        </ul>
+      </section>
+
+      <section id = 'cart-panel' class = 'p-2'>
+
+        <header class = 'd-flex justify-content-between align-items-center'>
+          <h2 style = 'font-size:20px'>Your Cart</h2>
+          <button id = 'close-cart-panel' class = 'bg-transparent border-0' style = 'font-size:22px'>
+            <i class = 'bi bi-x'></i>
+          </button>
+        </header>
+
+        <section id = 'empty-cart' class = 'd-flex flex-column justify-content-center align-items-center p-3'>
+          <strong>Your cart is empty</strong>
+          <button class = 'darkGreen-btn p-2 mt-2'>Continue shopping</button>
+        </section>
+
+        <table class = 'w-100' id = 'cart-products-table'>
+          <thead>
+            <tr>
+              <th class = 'text-left'><small class = 'text-primary'>PRODUCT</small></th>
+              <th class = 'text-right'><small class = 'text-primary'>TOTAL</small></th>
+            </tr>
+          </thead>
+          <tbody id = 'cart-products'>
+          </tbody>
+        </table>
+
+        <!-- You Might Also Like ( Product Card Is Required ) -->
+
+        <footer id = 'cart-totals'>
+          <div class = 'd-flex align-items-center justify-content-between'>
+            <b>Estimated total</b>
+            <span>$xx.xx USD</span>
+          </div>
+          <small class = 'text-gray' style = 'font-size:11px'>Taxes, discounts and shipping calculated at checkout</small>
+          <a href = '#checkout' class = 'p-2 m-auto d-block text-center darkGreen-btn'>Checkout</a>
+        </footer>
+
+        <div class = 'layout'></div>
+      </section>
     </header>
 
+    <footer class = 'bg-primary px-3 py-5'>
+      <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
+        <a href = '#about-us' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
+        <a href = '#contact' class = 'mx-2 d-block d-md-inline py-2 text-white'>Contact Us</a>
+        <a href = '#shop-all' class = 'mx-2 d-block d-md-inline py-2 text-white'>Shop All</a>
+      </nav>
+      <ul class = 'd-flex justify-content-center align-items-center px-0 py-5 list-unstyled'>
+        <li>
+          <a href = '#facebook' class = 'mx-2'>
+            <i class = 'bi bi-facebook text-white'></i>
+          </a>
+          <a href = '#instagram' class = 'mx-2'>
+            <i class = 'bi bi-instagram text-white'></i>
+          </a>
+          <a href = '#tiktok' class = 'mx-2'>
+            <i class = 'bi bi-tiktok text-white'></i>
+          </a>
+          <a href = '#pinterest' class = 'mx-2'>
+            <i class = 'bi bi-pinterest text-white'></i>
+          </a>
+      </ul>
+      <hr style = 'border-color:#FFF2;'/>
+
+      <ul class = 'd-flex list-unstyled px-0 justify-content-center align-items-center dot-separated-menu'>
+        <li class = 'text-white'>
+          &copy;
+          2026, Package Free
+        </li>
+        <li>
+          <a href = '#privacy-policy' class = 'text-white mx-2'>Privacy Policy</a>
+        </li>
+        <li>
+          <a href = '#terms' class = 'text-white mx-2'>Terms Of Use</a>
+        </li>
+      </ul>
+    </footer>
+  <script src = "scripts/main.js"></script>
   </body>
 </html>
