Added Header & Footer To All Pages

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
       </section>
     </header>
 
+    <main>
+      
+      <!-- Main Content Here -->
+
+    </main>
+
     <footer class = 'bg-primary px-3 py-5'>
       <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
         <a href = '#about-us' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
