--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
     <link rel = 'stylesheet' href = 'styling/main.css' />
+    <link rel = 'stylesheet' href = 'styling/homepage.css' />
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -143,7 +144,324 @@
 
     <main>
       
-      <!-- Main Content Here -->
+      <section id = 'fold'>
+        <h2 class = 'display-4'>A clean you can trust.</h2>
+        <p>Clean, simple, and EWG Verified®.</p>
+
+        <button class = 'glass-btn'>Start Fresh</button>
+      </section>
+
+      <section id = 'best-sellers' class = 'w-100 p-3 show-on-scroll text-center'>
+        <h3 class = 'text-left'>Best Sellers</h3>
+        <div class = 'products-carousel mb-5 position-relative overflow-hidden'>
+          <div class = 'carousel-container'>
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+          </div>
+          <div class = 'carousel-movement d-flex justify-content-center'>
+            <button class = 'bg-transparent text-primary border-0 mx-1 prev-slide'>
+              <i class = 'bi bi-chevron-left'></i>
+            </button>
+
+            <span class = 'carousel-current'>1</span>
+            <span class = 'mx-2'>/</span>
+            <span class = 'carousel-limit'>5</span>
+
+            <button class = 'bg-transparent text-primary border-0 mx-1 next-slide'>
+              <i class = 'bi bi-chevron-right'></i>
+            </button>
+          </div>
+        </div>
+        <a href = '#' class = 'mx-auto my-4 d-inline-block glass-btn'>VIEW ALL</a>
+      </section>
+
+      <section class = 'p-5 text-center bg-primary text-white bw-special-text-section show-on-scroll'>
+        <h3>
+          Our products are safe, minimal, and easy on the planet. They last when you need them, and biodegrade when you don’t.
+        </h3>
+      </section>
+
+      <section class = 'p-3 show-on-scroll'>
+        <h3 class = 'mb-5'>Better goods for a better planet.</h3>
+      
+        <div class = 'row taxonomy-grid justify-content-around'>
+          <div class = 'col-4 col-md-2'>
+            <img src = 'images/homepage-grid-1.jpg' />
+            <a class = 'text-primary' href = '#'>Kitchen & Food Storage <i class = 'bi bi-arrow-right'></i></a>
+          </div>
+          <div class = 'col-4 col-md-2'>
+            <img src = 'images/homepage-grid-2.jpg' />
+            <a class = 'text-primary' href = '#'>Cleaning & Laundry <i class = 'bi bi-arrow-right'></i></a>
+          </div>
+          <div class = 'col-4 col-md-2'>
+            <img src = 'images/homepage-grid-3.jpg' />
+            <a class = 'text-primary' href = '#'>Sustainable Food Storage <i class = 'bi bi-arrow-right'></i></a>
+          </div>
+          <div class = 'col-4 col-md-2'>
+            <img src = 'images/homepage-grid-4.jpg' />
+            <a class = 'text-primary' href = '#'>Body & Skincare <i class = 'bi bi-arrow-right'></i></a>
+          </div>
+          <div class = 'col-4 col-md-2'>
+            <img src = 'images/homepage-grid-5.jpg' />
+            <a class = 'text-primary' href = '#'>On the Go <i class = 'bi bi-arrow-right'></i></a>
+          </div>
+        </div>
+      </section>
+
+      <section class = 'bw-special-text-section bg-primary text-white p-5 show-on-scroll'>
+        <h3>Our packaging is backyard compostable, recyclable, and plastic-free. (That is, if we use any packaging at all).</h3>
+      </section>
+
+      <section class = 'p-3 show-on-scroll text-center'>
+        <h3 class = 'text-left'>Zero Waste Kits</h3>
+
+        <div class = 'products-carousel position-relative'>
+          <div class = 'carousel-container'>
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+
+            <div class="product-card h-100">
+              <img
+                src="https://media-cdn.oriflame.com/productImage?externalMediaId=product-management-media%2FProducts%2F45245%2F45245_1.png"
+                class="product-img"
+                alt="product"
+              />
+
+              <div class="product-body">
+                <h6 class="product-title">Box Laundry Detergent</h6>
+                <p class="product-brand">PACKAGE FREE</p>
+                <p class="product-price">$28.00 USD</p>
+              </div>
+
+              <button class="btn product-btn w-100">Choose options</button>
+            </div>
+          </div>
+          <div class = 'carousel-movement d-flex justify-content-center'>
+            <button class = 'bg-transparent text-primary border-0 mx-1 prev-slide'>
+              <i class = 'bi bi-chevron-left'></i>
+            </button>
+
+            <span class = 'carousel-current'>1</span>
+            <span class = 'mx-2'>/</span>
+            <span class = 'carousel-limit'>5</span>
+
+            <button class = 'bg-transparent text-primary border-0 mx-1 next-slide'>
+              <i class = 'bi bi-chevron-right'></i>
+            </button>
+          </div>
+        </div>
+
+
+        <a href = '#' class = 'glass-btn'>VIEW ALL</a>
+      </section>
+
+      <section class = 'd-flex justify-content-around align-items-center p-5 show-on-scroll row'>
+
+        <div class = 'card bg-secondary text-primary col-9 col-md-5 my-2 p-0'>
+          <img src = 'images/homepage-1.jpeg' class = 'card-img-top' />
+          <div class = 'card-body d-flex flex-column align-items-center justify-content-center'>
+            <span>SUBSCRIBE AND SAVE</span>
+            <b class = 'card-title my-3'>
+              Create a Habit
+            </b>
+            <a href = '#' class = 'text-primary'>
+              SUBSCRIBE NOW <i class = 'bi bi-arrow-right'></i>
+            </a>
+          </div>
+        </div>
+
+        <div class = 'card bg-secondary text-primary col-9 col-md-5 my-2 p-0'>
+          <img src = 'images/homepage-2.jpeg' class = 'card-img-top' />
+          <div class = 'card-body d-flex flex-column align-items-center justify-content-center'>
+            <span>GET STARTED</span>
+            <b class = 'card-title my-3'>
+              Only at Package Free
+            </b>
+            <a href = '#' class = 'text-primary'>
+              SHOP NOW <i class = 'bi bi-arrow-right'></i>
+            </a>
+          </div>
+        </div>
+
+      </section>
+
+      <section class = 'p-5 text-center text-white bw-special-text-section show-on-scroll' style = 'background:#613526'>
+        <h3 class = 'display-5'>
+           Get inspired to live your <a href = '#'>@PackageFreeShop</a> life
+          </h3>
+          <p>
+            Share with us how you're using your Package Free purchases to reduce your waste by tagging us <a href = '#'>@packagefreeshop</a> on Instagram!</p>
+      </section>
 
     </main>
 
@@ -184,5 +502,6 @@
       </ul>
     </footer>
   <script src = "scripts/main.js"></script>
+  <script src = 'scripts/homepage.js'></script>
   </body>
 </html>
