Save my work before pulling API changes

--- a/pages/collection.html
+++ b/pages/collection.html
@@ -4,9 +4,10 @@
     <title>Free Package Shop</title>
     <meta charset = 'utf-8' />
     <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
+    <link rel="stylesheet" href="../styling/collection.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel = 'stylesheet' href = 'styling/main.css' />
+    <link rel = 'stylesheet' href = '../styling/main.css'>
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -140,12 +141,27 @@
         <div class = 'layout'></div>
       </section>
     </header>
+<!-- ======================================================================================== -->
+  <main class="container my-5 product-grid">
+  <!-- Filter & Sort Row (اختياري) -->
+  <div class="filter-sort-row mb-5">
+    <div class="filter-tag">
+      <i class="bi bi-funnel-fill me-2"></i> Filter
+    </div>
+    <div class="sort-group">
+      <label>Sort by:</label>
+      <select class="sort-select form-select form-select-sm">
+        <option>Featured</option>
+        <option>Price: Low to High</option>
+        <option>Price: High to Low</option>
+        <option>Name: A to Z</option>
+      </select>
+    </div>
+  </div>
 
-    <main>
-      
-      <!-- Main Content Here -->
-
-    </main>
+  <!-- الأقسام هتترندر هنا تلقائيًا -->
+</main>
+    <!-- ================================================================================== -->
 
     <footer class = 'bg-primary px-3 py-5'>
       <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
@@ -183,6 +199,7 @@
         </li>
       </ul>
     </footer>
-  <script src = "scripts/main.js"></script>
+  <script src = "../scripts/"></script>
+  <script src="../scripts/collection.js"></script>
   </body>
 </html>
