--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -6,7 +6,7 @@
     <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel = 'stylesheet' href = 'styling/main.css' />
+    <link rel = 'stylesheet' href = '../styling/main.css' />
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -63,7 +63,7 @@
         </footer>
       </div>
 
-      <a href = 'index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+      <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
       <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
         <li class = 'mx-2'>
@@ -144,6 +144,10 @@
     <main>
       
       <!-- Main Content Here -->
+
+
+
+      <h1>kareeeeeeeeeeeeeeeeeeeeem</h1>
 
     </main>
 
