--- a/pages/single-product.html
+++ b/pages/single-product.html
@@ -6,7 +6,8 @@
     <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel = 'stylesheet' href = 'styling/main.css' />
+    <link rel = 'stylesheet' href = '../styling/main.css' />
+    <link rel="stylesheet" href="../styling/single-product.css">
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -63,7 +64,7 @@
         </footer>
       </div>
 
-      <a href = 'index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+      <a href = 'single-product.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
       <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
         <li class = 'mx-2'>
@@ -114,7 +115,7 @@
           <strong>Your cart is empty</strong>
           <button class = 'darkGreen-btn p-2 mt-2'>Continue shopping</button>
         </section>
-
+           
         <table class = 'w-100' id = 'cart-products-table'>
           <thead>
             <tr>
@@ -140,13 +141,22 @@
         <div class = 'layout'></div>
       </section>
     </header>
+<!-- ======================================================================= -->
+   <main class="container my-5" id="product-details">
+    <div class="quantity-section mt-4">
+  <p class="quantity-label">Quantity</p>
 
-    <main>
-      
-      <!-- Main Content Here -->
+  <div class="quantity-wrapper">
+    <button class="qty-btn" id="decrease">−</button>
+    <span id="quantity">1</span>
+    <button class="qty-btn" id="increase">+</button>
+  </div>
+</div>
 
-    </main>
 
+</main> 
+
+<!-- ======================================================================= -->
     <footer class = 'bg-primary px-3 py-5'>
       <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
         <a href = '#about-us' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
@@ -184,5 +194,6 @@
       </ul>
     </footer>
   <script src = "scripts/main.js"></script>
+<script src="../scripts/single-product.js"></script>
   </body>
 </html>
