--- a/pages/category.html
+++ b/pages/category.html
@@ -16,161 +16,134 @@
   <section id='above-header' class='text-center p-1 bg-primary'>
     <a class='text-white'>Enjoy free domestic shipping on orders $65+</a>
   </section>
-  <header class='d-flex align-items-center justify-content-between bg-secondary p-4'>
-    <button class='d-block d-md-none bg-transparent border-0' id='toggle-main-menu'>
-      <i class='bi bi-list'></i>
-    </button>
-    <div id='main-menu'>
-      <ul class='d-md-inline-flex m-0 p-0 list-unstyled'>
-   <li class='parent-element px-3' data-child="shop-all-menu">
-  <!-- الرابط الرئيسي (ده اللي بيفتح المنيو) -->
-  <a href='#'
-     class='bg-transparent border-0 text-primary menu-toggle'
-     data-toggle="shop-all-menu"
-     id='open-shop-all'
-     onclick="document.getElementById('shop-all-menu').classList.toggle('show'); return false;">
-    Shop All
-  </a>
-
-  <!-- القائمة المنسدلة -->
-  <ul class='child-menu' id='shop-all-menu'>
-    <!-- زر الرجوع في الموبايل -->
-    <li class='d-block d-md-none menu-toggle get-back'
-        data-original="open-shop-all"
-        data-toggle='shop-all-menu'>
-      <i class='bi bi-arrow-left mr-4'></i> Shop All
-    </li>
-
-    <!-- الكاتيجوريز مباشرة هنا -->
-    <li><a href="category.html?category=Kitchen">Kitchen</a></li>
-    <li><a href="category.html?category=Laundry">Laundry</a></li>
-    <li><a href="category.html?category=Bathroom">Bathroom</a></li>
-    <li><a href="category.html?category=Bedroom">Bedroom</a></li>
-    <!-- أضيفي باقي الكاتيجوريز -->
-
-    <li class='parent-element'>
-      <a href='#' class='menu-toggle text-primary' data-toggle='featured-products' id='featured-products-toggle'>
-        Featured
-      </a>
-      <ul class='child-menu' id='featured-products'>
-        <li class='menu-toggle get-back d-block d-md-none' data-original="featured-products-toggle" data-toggle='featured-products'>
-          <i class='bi bi-arrow-left mr-4'></i> Featured
-        </li>
-        <li>One</li>
-        <li>Two</li>
-      </ul>
-    </li>
-
-    <li>World</li>
-  </ul>
-</li>
-
-        <li class='px-3'>
-          <a href='#' class='text-primary'>About Us</a>
-        </li>
-      </ul>
-
-      <!-- الـ footer اللي بيظهر في الموبايل -->
-      <footer class='d-block d-md-none p-5 position-absolute bottom-0 w-100'>
-        <a href='#login' class='text-primary' style='font-size:18px'>
-          <i class='bi bi-person'></i>
-          Log in
-        </a>
-        <nav class='d-flex py-4'>
-          <a href='#facebook-link' target='_blank' class='text-primary mr-2'>
-            <i class='bi bi-facebook'></i>
+    <header class = 'd-flex align-items-center justify-content-between bg-secondary p-4' id = 'main-site-header'>
+      <button class = 'd-block d-md-none bg-transparent border-0' id = 'toggle-main-menu'>
+        <i class = 'bi bi-list'></i>
+      </button>
+      <div id = 'main-menu'>
+        <ul class = 'd-md-inline-flex m-0 p-0 list-unstyled'>
+          <li class = 'parent-element px-3' data-child = "shop-all-menu">
+            <a href = 'collection.html' class = 'bg-transparent border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>
+              Shop All
+            </a>
+            <ul class = 'child-menu' id = 'shop-all-menu'>
+              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop All</li>
+              <li class = 'parent-element'>
+                <a href = '#' class = 'menu-toggle text-primary' data-toggle = 'featured-products' id = 'featured-products-toggle'>
+                  Shop by Category
+                </a>
+                <ul class = 'child-menu' id = 'featured-products'>
+                  <li class = 'menu-toggle get-back d-block d-md-none' data-original = "featured-products-toggle" data-toggle='featured-products'><i class = 'bi bi-arrow-left mr-4'></i> Featured</li>
+                  <li><a href = 'category.html?category=Laundry'>Laundry</a></li>
+                  <li><a href = 'category.html?category=Kitchen'>Kitchen</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+          <li class = 'px-3'>
+            <a href = 'about-us.html' class = 'text-primary'>About Us</a>
+          </li>
+          <li class = 'px-3'>
+            <a href="contact-us.html" class = 'text-primary'>Contact Us</a>
+          </li>
+        </ul>
+        <footer class = 'd-block d-md-none p-5 position-absolute bottom-0 w-100'>
+          <a href = 'login.html' class = 'text-primary' style = 'font-size:18px'>
+            <i class = 'bi bi-person'></i>
+            Log in
           </a>
-          <a href='#pinterest-link' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-pinterest'></i>
-          </a>
-          <a href='#instagram' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-instagram'></i>
-          </a>
-          <a href='#tiktok' target='_blank' class='text-primary mx-2'>
-            <i class='bi bi-tiktok'></i>
-          </a>
-        </nav>
-      </footer>
-    </div>
-    </div>
+          <nav class = 'd-flex py-4'>
+            <a href = '#facebook-link' target = '_blank' class = 'text-primary mr-2'>
+              <i class = 'bi bi-facebook'></i>
+            </a>
+            <a href = '#pinterest-link' target = '_blank' class = 'text-primary mx-2'>
+              <i class = 'bi bi-pinterest'></i>
+            </a>
+            <a href = '#instagram' target = '_blank' class = 'text-primary mx-2'>
+              <i class = 'bi bi-instagram'></i>
+            </a>
+            <a href = '#tiktok' target = '_blank' class = 'text-primary mx-2'>
+              <i class = 'bi bi-tiktok'></i>
+            </a>
+          </nav>
+        </footer>
+      </div>
 
-    <a href='category.html'><img src='../images/logo.svg' width='180' alt="Website's Logo" /></a>
+      <a href = '../index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
-    <ul class='d-flex p-0 m-0 list-unstyled' id='icon-list'>
-      <li class='mx-2'>
-        <button id='open-search-panel' class='bg-transparent border-0 text-primary'>
-          <i class='bi bi-search'></i>
-        </button>
-      </li>
-      <li class='mx-2'>
-        <a href='pages/auth.html' class='d-none d-md-block button bg-transparent border-0 text-primary'>
-          <i class='bi bi-person' style='font-size:23px'></i>
-        </a>
-      </li>
-      <li class='mx-2'>
-        <button id='open-cart-panel' data-count="2" class='bg-transparent border-0 text-primary'>
-          <i class='bi bi-bag'></i>
-        </button>
-      </li>
-    </ul>
-
-    <section id='search-panel' class='w-100'>
-      <header class='w-100 bg-secondary p-4 d-flex justify-content-between align-items-center'>
-        <div class='labeled-input w-100'>
-          <input placeholder="hello" type='search' id='search' class='w-100 position-relative' title="Search" />
-          <label for='search'>Search</label>
-          <button class='bg-transparent border-top-0 border-right-0 border-bottom-0 border-color-primary px-3'>
-            <i class='bi bi-search'></i>
+      <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
+        <li class = 'mx-2'>
+          <button id = 'open-search-panel' class = 'bg-transparent border-0 text-primary'>
+            <i class = 'bi bi-search'></i>
           </button>
-        </div>
-        <button id='close-search-panel' class='bg-transparent border-0' style='font-size:25px'>
-          <i class='bi bi-x'></i>
-        </button>
-      </header>
-      <ul id='search-results'>
-
+        </li>
+        <li class = 'mx-2'>
+          <a href = 'auth.html' class = 'd-none d-md-block button bg-transparent border-0 text-primary'>
+            <i class = 'bi bi-person' style = 'font-size:23px'></i>
+          </a>
+        </li>
+        <li class = 'mx-2'>
+          <button id = 'open-cart-panel' data-count = "0" class = 'bg-transparent border-0 text-primary'>
+            <i class = 'bi bi-bag'></i>
+          </button>
+        </li>
       </ul>
-    </section>
 
-    <section id='cart-panel' class='p-2'>
+      <section id = 'search-panel' class = 'w-100'>
+        <header class = 'w-100 bg-secondary p-4 d-flex justify-content-between align-items-center'>
+          <div class = 'labeled-input w-100'>
+            <input placeholder = "hello" type = 'search' id = 'search' class = 'w-100 position-relative' title = "Search"/>
+            <label for = 'search'>Search</label>
+            <button class = 'bg-transparent border-top-0 border-right-0 border-bottom-0 border-color-primary px-3'>
+              <i class = 'bi bi-search'></i>
+            </button>
+          </div>
+          <button id = 'close-search-panel' class = 'bg-transparent border-0' style = 'font-size:25px'>
+            <i class = 'bi bi-x'></i>
+          </button>
+        </header>
+        <ul id = 'search-results'>
 
-      <header class='d-flex justify-content-between align-items-center'>
-        <h2 style='font-size:20px'>Your Cart</h2>
-        <button id='close-cart-panel' class='bg-transparent border-0' style='font-size:22px'>
-          <i class='bi bi-x'></i>
-        </button>
-      </header>
-
-      <section id='empty-cart' class='d-flex flex-column justify-content-center align-items-center p-3'>
-        <strong>Your cart is empty</strong>
-        <button class='darkGreen-btn p-2 mt-2'>Continue shopping</button>
+        </ul>
       </section>
 
-      <table class='w-100' id='cart-products-table'>
-        <thead>
-          <tr>
-            <th class='text-left'><small class='text-primary'>PRODUCT</small></th>
-            <th class='text-right'><small class='text-primary'>TOTAL</small></th>
-          </tr>
-        </thead>
-        <tbody id='cart-products'>
-        </tbody>
-      </table>
+      <section id = 'cart-panel' class = 'p-2'>
 
-      <!-- You Might Also Like ( Product Card Is Required ) -->
+        <header class = 'd-flex justify-content-between align-items-center'>
+          <h2 style = 'font-size:20px'>Your Cart</h2>
+          <button id = 'close-cart-panel' class = 'bg-transparent border-0' style = 'font-size:22px'>
+            <i class = 'bi bi-x'></i>
+          </button>
+        </header>
 
-      <footer id='cart-totals'>
-        <div class='d-flex align-items-center justify-content-between'>
-          <b>Estimated total</b>
-          <span>$xx.xx USD</span>
-        </div>
-        <small class='text-gray' style='font-size:11px'>Taxes, discounts and shipping calculated at checkout</small>
-        <a href='#checkout' class='p-2 m-auto d-block text-center darkGreen-btn'>Checkout</a>
-      </footer>
+        <section id = 'empty-cart' class = 'd-flex flex-column justify-content-center align-items-center p-3'>
+          <strong>Your cart is empty</strong>
+          <a class = 'darkGreen-btn p-2 mt-2' href = 'collection.html'>Continue shopping</a>
+        </section>
 
-      <div class='layout'></div>
-    </section>
-  </header>
+        <table class = 'w-100' id = 'cart-products-table'>
+          <thead>
+            <tr>
+              <th class = 'text-left'><small class = 'text-primary'>PRODUCT</small></th>
+              <th class = 'text-right' style = 'width:100px;'><small class = 'text-primary'>TOTAL</small></th>
+            </tr>
+          </thead>
+          <tbody id = 'cart-products'>
+          </tbody>
+        </table>
+        
+        <footer id = 'cart-totals'>
+          <div class = 'd-flex align-items-center justify-content-between'>
+            <b>Estimated total</b>
+            <span id = 'cart-totals-summary'>$xx.xx USD</span>
+          </div>
+          <small class = 'text-gray' style = 'font-size:11px'>Taxes, discounts and shipping calculated at checkout</small>
+          <a href = 'checkout.html' class = 'p-2 m-auto d-block text-center darkGreen-btn'>Checkout</a>
+        </footer>
+
+        <div class = 'layout'></div>
+      </section>
+    </header>
   <!-- ======================================================================================== -->
   <main class="container my-5 product-grid">
 
@@ -181,9 +154,9 @@
 
   <footer class='bg-primary px-3 py-5'>
     <nav class='d-block d-md-flex justify-content-center align-items-center'>
-      <a href='#about-us' class='d-block d-md-inline mx-2 py-2 text-white'>About Us</a>
-      <a href='#contact' class='mx-2 d-block d-md-inline py-2 text-white'>Contact Us</a>
-      <a href='#shop-all' class='mx-2 d-block d-md-inline py-2 text-white'>Shop All</a>
+      <a href='about-us.html' class='d-block d-md-inline mx-2 py-2 text-white'>About Us</a>
+      <a href='contact-us.html' class='mx-2 d-block d-md-inline py-2 text-white'>Contact Us</a>
+      <a href='collection.html' class='mx-2 d-block d-md-inline py-2 text-white'>Shop All</a>
     </nav>
     <ul class='d-flex justify-content-center align-items-center px-0 py-5 list-unstyled'>
       <li>
@@ -215,6 +188,7 @@
       </li>
     </ul>
   </footer>
+  <script src="../scripts/main.js"></script>
   <script src="../scripts/category.js"></script>
 </body>
 
