Added Header & Search Api Functionality

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </button>
           </div>
         </div>
-        <a href = '#' class = 'mx-auto my-4 d-inline-block glass-btn'>VIEW ALL</a>
+        <a href = 'pages/collection.html' class = 'mx-auto my-4 d-inline-block glass-btn'>VIEW ALL</a>
       </section>
 
       <section class = 'p-5 text-center bg-primary text-white bw-special-text-section show-on-scroll'>
@@ -305,8 +305,8 @@
         <h3>Our packaging is backyard compostable, recyclable, and plastic-free. (That is, if we use any packaging at all).</h3>
       </section>
 
-      <section class = 'p-3 show-on-scroll text-center'>
-        <h3 class = 'text-left'>Zero Waste Kits</h3>
+      <section class = 'p-3 show-on-scroll text-center' id = 'laundry-category'>
+        <h3 class = 'text-left'>Laundry Products</h3>
 
         <div class = 'products-carousel position-relative'>
           <div class = 'carousel-container'>
