--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,7 +6,7 @@
     <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel = 'stylesheet' href = 'styling/main.css' />
+    <link rel = 'stylesheet' href = '../styling/main.css' />
   </head>
   <body>
     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
@@ -166,12 +166,15 @@
             <i class = 'bi bi-pinterest text-white'></i>
           </a>
       </ul>
+      
       <hr style = 'border-color:#FFF2;'/>
+
 
       <ul class = 'd-flex list-unstyled px-0 justify-content-center align-items-center dot-separated-menu'>
         <li class = 'text-white'>
           &copy;
           2026, Package Free
+           
         </li>
         <li>
           <a href = '#privacy-policy' class = 'text-white mx-2'>Privacy Policy</a>
@@ -181,6 +184,6 @@
         </li>
       </ul>
     </footer>
-  <script src = "scripts/main.js"></script>
+  <script src = "../scripts/main.js"></script>
   </body>
 </html>
