--- a/pages/login.html
+++ b/pages/login.html
@@ -1,15 +1,24 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>Free Package Shop</title>
-    <meta charset = 'utf-8' />
-    <meta name = 'viewport' content = 'width=device-width,initial-scale=1.0' />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-    <link rel = 'stylesheet' href = '../styling/main.css' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log in</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="../styling/main.css" />
+    <link rel="stylesheet" href="../styling/login.css" />
   </head>
   <body>
-    <section id = 'above-header' class = 'text-center p-1 bg-primary'>
+     <section id = 'above-header' class = 'text-center p-1 bg-primary'>
       <a class = 'text-white'>Enjoy free domestic shipping on orders $65+</a>
     </section>
     <header class = 'd-flex align-items-center justify-content-between bg-secondary p-4'>
@@ -63,7 +72,7 @@
         </footer>
       </div>
 
-      <a href = 'index.html'><img src = 'images/logo.svg' width = '180' alt = "Website's Logo" /></a>
+      <a href = 'index.html'><img src = '../images/logo.svg' width = '180' alt = "Website's Logo" /></a>
 
       <ul class = 'd-flex p-0 m-0 list-unstyled' id = 'icon-list'>
         <li class = 'mx-2'>
@@ -141,12 +150,32 @@
       </section>
     </header>
 
-    <main>
-      
-      <!-- Main Content Here -->
-
-    </main>
-
+    <section class="hero">
+      <div class="overlay" aria-hidden="true"></div>
+      <div class="login-card" role="main" aria-labelledby="loginTitle">
+        <form action="./home.html">
+          <h1>Welcome Back!</h1>
+          <h2 id="loginTitle">SIGN IN</h2>
+          <input
+            id="username"
+            type="text"
+            placeholder="Enter Your Username"
+            aria-label="Email"
+            required
+          />
+          <input
+            id="password"
+            type="password"
+            placeholder="Enter Your Password"
+            aria-label="Password"
+            required
+          />
+          <button type="button" onclick="login()">Contuniue ></button>
+          <p><a href="#">Forget Password ?</a></p>
+          <p><a href="./register.html">or New Account !</a></p>
+        </form>
+      </div>
+    </section>
     <footer class = 'bg-primary px-3 py-5'>
       <nav class = 'd-block d-md-flex justify-content-center align-items-center'>
         <a href = '#about-us' class = 'd-block d-md-inline mx-2 py-2 text-white'>About Us</a>
@@ -183,6 +212,17 @@
         </li>
       </ul>
     </footer>
-  <script src = "../scripts/main.js"></script>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
