Some Header Modifications

--- a/pages/register.html
+++ b/pages/register.html
@@ -21,37 +21,39 @@
      <section id = 'above-header' class = 'text-center p-1 bg-primary'>
       <a class = 'text-white'>Enjoy free domestic shipping on orders $65+</a>
     </section>
-    <header class = 'd-flex align-items-center justify-content-between bg-secondary p-4'>
+    <header class = 'd-flex align-items-center justify-content-between bg-secondary p-4' id = 'main-site-header'>
       <button class = 'd-block d-md-none bg-transparent border-0' id = 'toggle-main-menu'>
         <i class = 'bi bi-list'></i>
       </button>
       <div id = 'main-menu'>
         <ul class = 'd-md-inline-flex m-0 p-0 list-unstyled'>
           <li class = 'parent-element px-3' data-child = "shop-all-menu">
-            <a href = '#' class = 'bg-transparent border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>
+            <a href = 'collection.html' class = 'bg-transparent border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>
               Shop All
             </a>
             <ul class = 'child-menu' id = 'shop-all-menu'>
               <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop All</li>
               <li class = 'parent-element'>
                 <a href = '#' class = 'menu-toggle text-primary' data-toggle = 'featured-products' id = 'featured-products-toggle'>
-                  Featured
+                  Shop by Category
                 </a>
                 <ul class = 'child-menu' id = 'featured-products'>
                   <li class = 'menu-toggle get-back d-block d-md-none' data-original = "featured-products-toggle" data-toggle='featured-products'><i class = 'bi bi-arrow-left mr-4'></i> Featured</li>
-                  <li>One</li>
-                  <li>Two</li>
+                  <li><a href = 'category.html?category=Laundry'>Laundry</a></li>
+                  <li><a href = 'category.html?category=Kitchen'>Kitchen</a></li>
                 </ul>
               </li>
-              <li>World</li>
             </ul>
           </li>
           <li class = 'px-3'>
-            <a href = '#' class = 'text-primary'>About Us</a>
+            <a href = 'about-us.html' class = 'text-primary'>About Us</a>
+          </li>
+          <li class = 'px-3'>
+            <a href="contact-us.html" class = 'text-primary'>Contact Us</a>
           </li>
         </ul>
         <footer class = 'd-block d-md-none p-5 position-absolute bottom-0 w-100'>
-          <a href = '#login' class = 'text-primary' style = 'font-size:18px'>
+          <a href = 'login.html' class = 'text-primary' style = 'font-size:18px'>
             <i class = 'bi bi-person'></i>
             Log in
           </a>
@@ -81,12 +83,12 @@
           </button>
         </li>
         <li class = 'mx-2'>
-          <a href = 'pages/auth.html' class = 'd-none d-md-block button bg-transparent border-0 text-primary'>
+          <a href = 'auth.html' class = 'd-none d-md-block button bg-transparent border-0 text-primary'>
             <i class = 'bi bi-person' style = 'font-size:23px'></i>
           </a>
         </li>
         <li class = 'mx-2'>
-          <button id = 'open-cart-panel' data-count = "2" class = 'bg-transparent border-0 text-primary'>
+          <button id = 'open-cart-panel' data-count = "0" class = 'bg-transparent border-0 text-primary'>
             <i class = 'bi bi-bag'></i>
           </button>
         </li>
@@ -121,34 +123,33 @@
 
         <section id = 'empty-cart' class = 'd-flex flex-column justify-content-center align-items-center p-3'>
           <strong>Your cart is empty</strong>
-          <button class = 'darkGreen-btn p-2 mt-2'>Continue shopping</button>
+          <a class = 'darkGreen-btn p-2 mt-2' href = 'collection.html'>Continue shopping</a>
         </section>
 
         <table class = 'w-100' id = 'cart-products-table'>
           <thead>
             <tr>
               <th class = 'text-left'><small class = 'text-primary'>PRODUCT</small></th>
-              <th class = 'text-right'><small class = 'text-primary'>TOTAL</small></th>
+              <th class = 'text-right' style = 'width:100px;'><small class = 'text-primary'>TOTAL</small></th>
             </tr>
           </thead>
           <tbody id = 'cart-products'>
           </tbody>
         </table>
-
-
+        
         <footer id = 'cart-totals'>
           <div class = 'd-flex align-items-center justify-content-between'>
             <b>Estimated total</b>
-            <span>$xx.xx USD</span>
+            <span id = 'cart-totals-summary'>$xx.xx USD</span>
           </div>
           <small class = 'text-gray' style = 'font-size:11px'>Taxes, discounts and shipping calculated at checkout</small>
-          <a href = '#checkout' class = 'p-2 m-auto d-block text-center darkGreen-btn'>Checkout</a>
+          <a href = 'checkout.html' class = 'p-2 m-auto d-block text-center darkGreen-btn'>Checkout</a>
         </footer>
 
         <div class = 'layout'></div>
       </section>
     </header>
-
+    
     <section class="hero">
       <div class="overlay" aria-hidden="true"></div>
       <div class="login-card" role="main" aria-labelledby="loginTitle">
