--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -207,7 +207,7 @@
   <div class="container">
     <h3 class="mb-4">Ready to get started?</h3>
 
-    <div class="row g-4">
+    <div class="row g-4" id = 'about-us-products'>
       <!-- Card 1 -->
       <div class="col-12 col-sm-6 col-md-3">
         <div class="product-card h-100">
@@ -366,5 +366,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src = "../scripts/main.js"></script>
+  <script src="../scripts/about-us.js"></script>
   </body>
 </html>
