--- a/pages/collection.html
+++ b/pages/collection.html
@@ -136,7 +136,7 @@
       id="search-input"
       placeholder=" search for your product  ..."
       class="navbar-search-input"
-    />
+      autocomplete="off"   />
 
     <ul id="search-suggestions" ></ul>
     </div>
