--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -23,7 +23,7 @@
         <!-- Header -->
         <div class="header-section">
           <div style="width: 40px"></div>
-          <div class="logo">Package<span>®</span><br />Free</div>
+          <a class="logo" href = '../index.html'>Package<span>®</span><br />Free</a>
           <div class="cart-icon-header">
             <svg viewBox="0 0 24 24">
               <path
@@ -407,8 +407,7 @@
 
         <!-- Right Section - Order Summary -->
         <div class="order-summary">
-          <div id="productsList">
-            <!-- Products will be dynamically inserted here -->
+          <div id="productsList" class = 'is-loading'>
           </div>
 
           <div class="discount-section">
@@ -445,6 +444,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../scripts/main.js"></script>
     <script src="../scripts/checkout.js"></script>
   </body>
 </html>
