Finished The Website

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -24,7 +24,7 @@
         <div class="header-section">
           <div style="width: 40px"></div>
           <a class="logo" href = '../index.html'>Package<span>®</span><br />Free</a>
-          <div class="cart-icon-header">
+          <!-- <div class="cart-icon-header">
             <svg viewBox="0 0 24 24">
               <path
                 class="icon-bag"
@@ -34,7 +34,7 @@
               <path class="icon-bag" d="M16 10a4 4 0 0 1-8 0" />
             </svg>
             <div class="cart-badge" id="cartBadge">1</div>
-          </div>
+          </div> -->
         </div>
 
         <!-- Left Section - Form -->
