--- a/pages/category.html
+++ b/pages/category.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../styling/search.css" />
 </head>
 
-<body>
+<body id = 'category-page'>
   <section id='above-header' class='text-center p-1 bg-primary'>
     <a class='text-white'>Enjoy free domestic shipping on orders $65+</a>
   </section>
@@ -26,7 +26,7 @@
           <li class = 'parent-element px-3' data-child = "shop-all-menu">
             <button class = 'bg-transparent pr-2 border-0 text-primary menu-toggle' data-toggle = "shop-all-menu" id = 'open-shop-all'>Shop</button>
             <ul class = 'child-menu' id = 'shop-all-menu'>
-              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop All</li>
+              <li class = 'd-block d-md-none menu-toggle get-back' data-original = "open-shop-all" data-toggle='shop-all-menu'><i class = 'bi bi-arrow-left mr-4'></i> Shop</li>
               <li>
                 <a href="collection.html" class = 'text-primary'>
                   Shop All
@@ -40,6 +40,8 @@
                   <li class = 'menu-toggle get-back d-block d-md-none' data-original = "featured-products-toggle" data-toggle='featured-products'><i class = 'bi bi-arrow-left mr-4'></i> Featured</li>
                   <li><a class = 'text-primary' href = 'category.html?category=Laundry'>Laundry</a></li>
                   <li><a class = 'text-primary' href = 'category.html?category=Kitchen'>Kitchen</a></li>
+                  <li><a class = 'text-primary' href = 'category.html?category=Bathroom'>Bathroom</a></li>
+                  <li><a class = 'text-primary' href = 'category.html?category=Bedroom'>Bedroom</a></li>
                 </ul>
               </li>
             </ul>
